<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.trendtechnology.noteme.EditorActivity"
    tools:showIn="@layout/activity_editor">

    <EditText
        android:id="@+id/editor_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/hint_head" />

    <ImageView
        android:id="@+id/editor_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editor_head"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/description_editor_image"
        android:src="@mipmap/ic_insert_photo_black_24dp" />

    <Button
        android:id="@+id/editor_btn_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editor_head"
        android:text="@string/btn_add_image_label" />

    <EditText
        android:id="@+id/editor_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editor_btn_add_photo"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/hint_body"
        android:inputType="textMultiLine|textCapSentences" />

</RelativeLayout>
